Fix hs display overflowing page on mobile

--- a/src/path-to-hs/path-to-hs.scss
+++ b/src/path-to-hs/path-to-hs.scss
@@ -1,3 +1,5 @@
+@import "../shared/styles/variables";
+
 .main-page {
   height: 100vh;
   width: 100vw;
@@ -11,9 +13,12 @@
 .student-data-form-container {
   height: 100vh;
   flex: 1 0 320px;
+
 }
 
 .hs-programs-container {
   height: 100vh;
-  flex: 2 0 50vw;
+  flex: 2 1 50vw;
+  max-width: 100vw;
+  border: 2px solid $col-app-gray;
 }
